--- a/JenkinsFile
+++ b/JenkinsFile
@@ -5,6 +5,7 @@ pipeline{
         stage('Stage: 1'){
             steps{
                 echo "Working...."
+                echo "Testing...."
             }
         }
     }
